# vitrina

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
.claude/: launch.json
.github/: pull_request_template.md  security-scan-instructions.md
backend/: .dockerignore  .importlinter  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_admin_credentials.py  0003_deletion_requests.py  0004_generation_audits.py  0005_subscriptions.py  0006_application_photos.py  0007_site_reviews_curated.py  0008_site_analytics.py  0009_feedback_marked_in_development.py  0010_intake_v030.py  0011_users_customer_auth.py  0012_feedback_votes.py  0013_add_website_source_type.py  0014_elektrik_leads.py  0015_lk_leads.py  0016_change_request.py  0017_site_soft_delete.py  0018_intake_v2.py  0019_text_files_disk_path.py  0020_feedback_v2.py  0021_feedback_reason_check.py
backend/app/: __init__.py  config.py  main.py
backend/app/admin/: __init__.py
backend/app/admin/routers/: api.py  auth.py  dashboard.py  feedback.py  leads.py  sites.py
backend/app/admin/templates/: _base.html  application_detail.html  applications_list.html  dashboard.html  feedback_list.html  lead_detail.html  lead_list.html  login.html  site_detail.html  sites_list.html  waitlist.html
backend/app/api/dependencies/: __init__.py
backend/app/api/middleware/: __init__.py  error_handler.py  headers.py  rate_limit.py  request_id.py
backend/app/api/routers/: applications.py  auth.py  billing.py  elektrik_site.py  feedback.py  leads.py  leads_elektrik.py  lk.py  me.py  milreview_site.py  preview.py  static_sites.py  track.py
backend/app/api/schemas/: applications.py  feedback.py  leads.py  me.py  preview.py  preview_draft.py  track.py
backend/app/bot/: main.py
backend/app/cli/: seed_admin.py
backend/app/core/analytics/: service.py
backend/app/core/applications/: service.py
backend/app/core/auth/: admin.py  customer.py  login_challenge.py  sessions.py
backend/app/core/billing/: ports.py  service.py  state_machine.py
backend/app/core/captcha/: verifier.py
backend/app/core/consent/: ledger.py
backend/app/core/contact/: auto_detect.py
backend/app/core/content/: output_validator.py  pii_obfuscator.py  ports.py  prompt_builder.py  service.py
backend/app/core/content/prompts/: generate_site.j2
backend/app/core/erasure/: service.py
backend/app/core/feedback/: service.py
backend/app/core/keywords/: __init__.py  service.py
backend/app/core/leads/: encryption.py  pii_masking.py  ports.py
backend/app/core/notify/: dispatcher.py  ports.py
backend/app/core/notify/channels/: email.py  telegram.py
backend/app/core/parsing/: file_validators.py  ports.py  sanitizer.py  service.py  url_validator.py
backend/app/core/parsing/adapters/: photos.py  telegram_bot.py  telegram_html_export.py  telegram_webview.py  ymaps.py
backend/app/core/preview/: draft.py  draft_builder.py  ports.py  search.py  service.py
backend/app/core/preview/adapters/: tg.py  ymaps.py
backend/app/core/publishing/: elektrik.py  milreview.py  ports.py  render.py  service.py
backend/app/core/reviews/: __init__.py  pii_filter.py  service.py
backend/app/core/reviews/prompts/: curate.j2
backend/app/core/seo/: ports.py  service.py
backend/app/core/seo/adapters/: google_search_console.py  indexnow.py  yandex_webmaster.py
backend/app/infrastructure/: http_fetch.py
backend/app/infrastructure/audit/: generation.py
backend/app/infrastructure/email/: smtp_client.py
backend/app/infrastructure/leads/: service.py
backend/app/infrastructure/postgres/: __init__.py  base.py  engine.py  models.py
backend/app/infrastructure/s3/: uploader.py
backend/app/infrastructure/telegram/: bot_client.py
backend/app/infrastructure/yandex/: geosearch.py  gpt.py
backend/app/infrastructure/yookassa/: client.py
backend/app/utils/: errors.py  logging.py  security.py
backend/app/workers/: analytics_digest.py  content.py  data_deletion.py  parser.py  publish_milreview.py  purge.py  seed_elektrik_user.py  seed_milreview_user.py  sync.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_admin_api.py  test_admin_applications.py  test_admin_feedback.py  test_admin_leads.py  test_admin_sites_generate.py  test_admin_sites_publish.py  test_applications.py  test_applications_v2.py  test_auth.py  test_billing.py  test_e9_smoke.py  test_feedback.py  test_feedback_v2.py  test_leads.py  test_leads_elektrik.py  test_lk_leads.py  test_me_delete_data.py  test_preview.py  test_preview_draft.py  test_track.py
backend/tests/security/: test_crypto_roundtrip.py  test_photo_upload.py  test_pii_obfuscation.py  test_prompt_injection.py  test_snapshot_sanitizer.py  test_ssrf.py
backend/tests/unit/: test_admin_auth.py  test_analytics_service.py  test_billing_state_machine.py  test_captcha_verifier.py  test_consent_ledger.py  test_contact_auto_detect.py  test_content_service.py  test_customer_template_render.py  test_customer_template_v21.py  test_keywords_service.py  test_middleware.py  test_milreview_site_router.py  test_notify_dispatcher.py  test_parser_service.py  test_prompt_builder.py  test_publishing_service.py  test_review_curation.py  test_seo_submission.py  test_smoke.py  test_smtp_client.py  test_tg_bot_adapter.py  test_tg_html_export_adapter.py  test_tg_webview_adapter.py  test_yandexgpt_client.py  test_ymaps_adapter.py  test_yookassa_client.py
backend/tests/unit/publishing/: test_elektrik.py  test_milreview.py
docs/: ARCHITECTURE.md  COPY.md  DEPLOYMENT.md  OPERATIONS.md  PRD.md  SECURITY.md  TASKS.md  TESTING.md
infra/: Caddyfile  Caddyfile.dev  (+5 more)
(+261 files in other folders)
