[tool.poetry]
name = "vitrina-backend"
version = "0.1.0"
description = "Vitrina — AI-generated sites for micro-business (RU). Backend monolith."
authors = ["Vitrina Founder <founder@vitrina.site>"]
license = "UNLICENSED"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# Pinned to 3.12.x — see .python-version. Newer minor versions (3.13/3.14)
# break pyo3-based wheels (pydantic-core, cryptography) until those upgrade.
python = "~3.12"

# Web + API
# Caret on 0.115 pins to <0.116, where starlette is capped at <0.47 — that
# blocks the starlette CVE bump. Open-ended so Poetry picks the latest
# pre-1.0 fastapi that supports starlette >=0.49.1.
fastapi = ">=0.115,<1.0"
starlette = ">=0.49.1"  # pip-audit: CVE-2025-54121, CVE-2025-62727
pydantic = "^2.10"
pydantic-settings = "^2.7"
uvicorn = { extras = ["standard"], version = "^0.34" }
python-multipart = ">=0.0.27"  # pip-audit: CVE-2026-24486 / 40347 / 42561
itsdangerous = "^2.2"
email-validator = "^2.2"

# Persistence
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
alembic = "^1.14"
asyncpg = "^0.30"
psycopg = { extras = ["binary"], version = "^3.2" }

# Queue + cache
redis = "^5.2"
rq = "^2.1"
rq-scheduler = "^0.14"

# Security / crypto / auth
cryptography = "^46.0"  # pip-audit: CVE-2026-26007, CVE-2026-34073
passlib = { extras = ["bcrypt"], version = "^1.7" }
pyotp = "^2.9"
authlib = "^1.3"

# Input/output safety
bleach = "^6.2"
lxml = "^6.0"  # pip-audit: CVE-2026-41066
python-magic = "^0.4"
phonenumbers = "^8.13"

# Media
pillow = "^12.0"  # pip-audit: CVE-2026-25990, 40192, 42308, 42309, 42310, 42311

# HTTP client + scrapers
httpx = "^0.28"
playwright = "^1.49"

# Storage
aiobotocore = "^2.15"

# Bot
aiogram = "^3.16"

# Templating
jinja2 = "^3.1"

# Observability
structlog = "^24.4"
sentry-sdk = { extras = ["fastapi"], version = "^2.19" }

# Domain helpers
result = "^0.17"

[tool.poetry.group.dev.dependencies]
# Test stack
pytest = "^9.0"  # pip-audit: CVE-2025-71176
pytest-asyncio = ">=0.27"
pytest-cov = "^6.0"
pytest-mock = "^3.14"
hypothesis = "^6.123"
testcontainers = { extras = ["postgres", "redis"], version = "^4.9" }
factory-boy = "^3.3"
freezegun = "^1.5"

# Quality
ruff = "^0.8"
mypy = "^1.14"
import-linter = "^2.1"

# Security gates
bandit = { extras = ["toml"], version = "^1.8" }
pip-audit = "^2.7"
safety = "^3.2"

# Git hooks (T0.2)
pre-commit = "^4.0"

# Type stubs
types-bleach = "*"
types-passlib = "*"
types-redis = "*"

# Repl
ipython = "^8.30"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# ---- Ruff (lint + format) ----------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (overlap with bandit; cheap subset)
    "ASYNC",
    "TID",  # tidy-imports
    "PT",   # pytest style
    "ARG",  # unused arguments
    "PIE",
    "RET",
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long — formatter handles
    "S101",  # use of assert — fine in tests
    "B008",  # function call in default arg — fine for FastAPI Depends()
    # The product ships Russian content (legal copy, marketing, error
    # messages). RUF001-003 flag cyrillic characters that look like Latin
    # — useful for typosquatting in a Latin-only codebase, false-positive
    # noise here.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ARG", "N802", "N803"]
"alembic/env.py" = ["S", "E402"]

[tool.ruff.lint.isort]
# `alembic/` is the migrations directory — ruff would otherwise auto-detect
# it as a first-party package by name and reorder `from alembic import …`.
# Force the library back into third-party.
known-first-party = ["app"]
known-third-party = ["alembic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- Mypy (strict) -----------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/.*"]

[[tool.mypy.overrides]]
module = [
    "rq.*",
    "rq_scheduler.*",
    "playwright.*",
    "aiobotocore.*",
    "factory.*",
    "freezegun.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---- Pytest ------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests, no I/O",
    "integration: requires postgres/redis",
    "e2e: end-to-end with Playwright",
    "security: security-specific tests (SSRF, prompt-injection, XSS, authz)",
    "slow: takes > 5s",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ---- Bandit ------------------------------------------------------------------

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
# B101 (assert_used) handled by ruff per-file-ignores; bandit also skips here
skips = ["B101"]
